Trying to fix on mobile...

--- a/style.css
+++ b/style.css
@@ -51,11 +51,9 @@ a:hover {
     width: 150px;
     padding: 30px;
     font-size: 18px;
-    position: fixed;
     height: 100%;
     position: fixed;
-    padding: 2em;
-    top: 0%;
+    top: 0;
     transform: translateX(860px);
 }
 
